test/mutation_analysis/s0001_two_sum/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0001_two_sum/hafis/starchat/mutants/2/Solution.java:24: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
